Fix issue with author link getting in the way of result buttons on smaller screens
Added z-index on play-again button for it to
appear on top of the link on smaller screens.

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ header p, .results-container p, .play-again{
 .play-again{
     padding:20px;
     font-size:5vw;
+    z-index: 1;
 }
 
 .play-again:hover{
